2-containers-1-domain/k8s/kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spa-and-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  # TODO: add `host: example.com`
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: net-api
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-app
            port:
              number: 80
